# sparseicp

./: CMakeLists.txt  pybind.cpp  sparseicp.py
lib/IcpOptimizer/: IcpOptimizer.cpp
